<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingStart="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contoh_input_text_dan_button"
        android:textSize="24sp"
        android:textColor="@color/purple_500"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:id="@+id/namaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/isi_nama"
        android:minHeight="48dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/isi_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints="@string/isi_nomor_hp"
        android:ems="10"
        android:hint="@string/isi_nomer_hp"
        android:inputType="phone"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/isi_tanggal"
        android:inputType="date"
        android:minHeight="48dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="creditCardExpirationDate" />

    <EditText
        android:id="@+id/numberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/isi_angka"
        android:inputType="number"
        android:minHeight="48dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="creditCardNumber" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/simpanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/sukses"
            android:text="@string/simpan"
            android:textColor="#4A148C"
            android:drawableStart="@drawable/ic_baseline_save_24"/>

        <Button
            android:id="@+id/batalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batal"
            android:backgroundTint="@color/danger"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_baseline_cancel_24"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>